--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function keisan() {
 </table>
 
 <!-- 注意書き -->
-<p>※入学手続き時の学費がマイナスの金額になった場合は入学手続き時の学費ご納入は不要です。</p>
+<p>※入学手続き時の学費が0円になった場合は入学手続き時の学費ご納入は不要です。</p>
 
 </form>
 </body>
